--- a/style.css
+++ b/style.css
@@ -180,6 +180,7 @@ h1 { /* 設定標題的樣式，置中並使用深色背景 */
 }
 
 .audio-controls {
+    padding-top: 10px; /* 设置间距 */
     display: flex;
     width: fit-content;
     gap: 12px;
@@ -281,9 +282,9 @@ h1 { /* 設定標題的樣式，置中並使用深色背景 */
 
 #noteContainer {
     background: #f2f2f2;
-    padding: 10px;
+    padding: 10px; /* 内部四周的间距 */
     border-radius: 8px;
-    margin-top: 15px;
+    margin-top: 5px; /* `noteContainer` 与上方元素的外部间距 */
     max-height: 120px;
     overflow: hidden;
 }
@@ -302,7 +303,7 @@ h1 { /* 設定標題的樣式，置中並使用深色背景 */
 }
 
 #wordNote:focus {
-    border: 1px solid #007bff; /* 聚焦時變成藍色 */
+    border: none;
     outline: none;
 }
 
