--- a/quize.css
+++ b/quize.css
@@ -109,6 +109,7 @@ h1, h2 {
     border: none;
     cursor: pointer;
     font-weight: bold;
+    font-size: 24px; /* 調整字體大小 */
     transition: background-color 0.3s ease;
 }
 
@@ -195,6 +196,36 @@ h1, h2 {
     border: none;
     padding: 10px 20px;
     cursor: pointer;
+}
+
+#quizResult .button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #4CAF50;  /* 綠色背景 */
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#quizResult .button:hover {
+    background-color: #45a049;  /* Hover 效果 */
+}
+
+.phonetic-btn {
+    background-color: #6e8191;
+    color: white;
+    padding: 8px 12px;
+    margin-left: 10px;
+    border-radius: 15px;
+    border: none;
+    cursor: pointer;
+    font-size: 20px; /* 提高清晰度 */
+    transition: background-color 0.3s ease;
+}
+
+.phonetic-btn:hover {
+    background-color: #4a6375;
 }
 
 
