--- a/quiz.css
+++ b/quiz.css
@@ -305,5 +305,12 @@ h1, h2 {
         width: 90%;
         max-width: 250px;
     }
+.container {
+    max-width: 414px;
+    width: 100%;
+    margin: 0 auto;
+    overflow-x: hidden;
+    box-sizing: border-box;
+}
 
 }
